--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "grunt": "^0.4.5",
     "grunt-mocha-cli": "^2.0.0",
     "load-grunt-tasks": "^3.3.0",
-    "ref": "^1.2.0"
+    "ref": "^1.2.0",
+    "ref-struct": "^1.0.2",
+    "ref-union": "^1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -34,6 +36,7 @@
     "Registry",
     "regedit",
     "file",
+    "uac",
     "association"
   ],
   "author": "sedouard",
