--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "debug": "^2.2.0",
     "ffi": "^2.0.0",
     "grunt": "^0.4.5",
     "grunt-mocha-cli": "^2.0.0",
