--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt": "^0.4.5",
     "grunt-mocha-cli": "^2.0.0",
     "load-grunt-tasks": "^3.3.0",
+    "mockery": "^1.4.0",
     "ref": "^1.2.0",
     "ref-struct": "^1.0.2",
     "ref-union": "^1.0.0"
