--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-mocha-cli": "^2.0.0",
-    "load-grunt-tasks": "^3.3.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jsbeautifier": "^0.2.10",
-    "grunt-jscs": "^2.1.0"
+    "grunt-jscs": "^2.1.0",
+    "grunt-mocha-cli": "^2.0.0",
+    "load-grunt-tasks": "^3.3.0",
+    "mockery": "^1.4.0"
   },
   "scripts": {
     "test": "grunt test"
